--- a/restaran-client/src/styles/css/admin.css
+++ b/restaran-client/src/styles/css/admin.css
@@ -208,11 +208,17 @@ a:hover {
 }
 
 /* Card */
-.card {
+.card1 {
     margin-bottom: 30px;
     border: none;
     border-radius: 5px;
-    box-shadow: 0px 0 30px rgba(26, 246, 114, 0.1);
+    box-shadow: 0 0 30px 1px rgba(29, 29, 29, 0.11);
+    transition: all .1s linear;
+}
+
+.card1:hover{
+    box-shadow: 0 0 30px 1px rgba(47, 44, 44, 0.38);
+    transform: scale(1.1);
 }
 
 .card-header, .card-footer {
