--- a/restaran-client/src/styles/css/home.css
+++ b/restaran-client/src/styles/css/home.css
@@ -5,13 +5,14 @@
 }
 
 .head {
-    background-image: url("https://anons.uz/media/news/medium/rabstol_net_pizza_28_watermarked.jpg");
+    background-image: url("http://wallpapersdsc.net/wp-content/uploads/2016/09/Food-for-desktop.jpg");
     width: 100%;
     height: 80vh;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
+
 
 .container {
     height: 100vh;
@@ -41,7 +42,8 @@
     border-image: initial;
     transition: background-color 0.5s ease 0s;
     font-family: "Open Sans", sans-serif;
-    background-color: rgb(255, 222, 89);
+    /*background-color: rgb(255, 222, 89);*/
+    background-color: rgb(34, 208, 71);
 }
 
 .boxs {
